--- a/P010339.opf/meta.yml
+++ b/P010339.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W3CN4666
   title: རྟེན་འབྲེལ་གྱི་རྣམ་བཞག་ལུང་རིགས་བང་མཛོད།
   author: ''
-  volumes: {}
+  volumes:
+    591cd4c75e8045cab888e4acd0fc5540:
+      image_group_id: I3CN4668
+      title: ''
+      volume_number: 1
+      total_pages: 68
