--- a/P010339.opf/layers/v001/Pagination.yml
+++ b/P010339.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 38330fb124c64266bec223e3b09bc9e2
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   4be63861c0ad436585671058b6f0bfc3:
